# recipes

./: Cargo.toml  Dockerfile  README.md  build.sh  package-lock.json  recipes.sqlite  start.sh  vite.config.ts
backend/: .gitignore
backend/src/: model.rs  schema.rs
container/: nginx.conf  serve.sh
dev_proxy/: Dockerfile  nginx.conf  start.sh
frontend/: index.html  package.json  vite.config.ts
frontend/src/: AddFood.tsx  FoodList.tsx  Loading.module.css  Loading.tsx  Recipe.ts  constants.ts  env.d.ts
migrations/2023-04-30-070438_create_recipes/: down.sql  up.sql
src/: AddFood.tsx  App.tsx  FoodList.module.css  FoodList.tsx  ShowFood.tsx  Stars.tsx  index.tsx  main.rs  rest.rs
